; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_kvm_main.c_kvm_dev_ioctl_check_extension_generic.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_kvm_main.c_kvm_dev_ioctl_check_extension_generic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KVM_MAX_IRQ_ROUTES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @kvm_dev_ioctl_check_extension_generic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @kvm_dev_ioctl_check_extension_generic(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  switch i64 %4, label %6 [
    i64 128, label %5
    i64 133, label %5
    i64 130, label %5
    i64 132, label %5
  ]

5:                                                ; preds = %1, %1, %1, %1
  store i64 1, i64* %2, align 8
  br label %10

6:                                                ; preds = %1
  br label %7

7:                                                ; preds = %6
  %8 = load i64, i64* %3, align 8
  %9 = call i64 @kvm_dev_ioctl_check_extension(i64 %8)
  store i64 %9, i64* %2, align 8
  br label %10

10:                                               ; preds = %7, %5
  %11 = load i64, i64* %2, align 8
  ret i64 %11
}

declare dso_local i64 @kvm_dev_ioctl_check_extension(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
